--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@
 .nav-btn {
     background: #74747459;
     border: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.308);
     padding: 10px 20px;
     color: #fff;
     margin: 0 5px;
