--- a/style.css
+++ b/style.css
@@ -8,10 +8,14 @@
 #app-container {
     font-family: 'Inter', sans-serif;
     background-color: #ffffff00;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.144), rgba(rgba(0, 0, 0, 0.144))),
-        url('https://github.com/systemfems/Drone/blob/4b8be91e67f050812eda0451c2c916fa13c937a4/drone%202.webp');
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.4), 
+        rgba(0, 0, 0, 0.4)
+    ),
+    url('drone 2.webp');
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 /* Kad & Borang */
